--- a/_teaching/2023 DM.md
+++ b/_teaching/2023 DM.md
@@ -8,12 +8,15 @@ date: 2023-3-1
 location: "ShenZhen, China"
 ---
 
-As a Teaching Assistant for the Data Mining course at the Computer Science department of Southern University of Science and Technology (SUSTech), my responsibilities include:
+As a Teaching Assistant for the Data Mining course at the Computer Science department of Southern University of Science and Technology (SUSTech).
+
+My responsibilities include:
 
 - Assisting the professor in preparing and delivering lectures and tutorials on various data mining techniques and algorithms.
-- Grading assignments, quizzes, and exams, and providing constructive feedback to students.
+- Grading assignments, paper and providing constructive feedback to students.
 - Conducting office hours and review sessions to help students better understand the course materials and solve their problems.
 - Collaborating with the professor to design and develop new assignments and projects that align with the learning objectives of the course.
 - Ensuring academic integrity and maintaining a fair and respectful learning environment for all students.
+- Design the final project "MinGPT"
 
 Through my work as a Teaching Assistant, I have honed my communication, leadership, and problem-solving skills, and gained valuable experience in teaching and mentoring students in the field of data mining.
