--- a/_talks/2022 SP.md
+++ b/_talks/2022 SP.md
@@ -9,5 +9,9 @@ location: "Seattle, USA"
 
 The poster of UAML on 2022 SIGSPATIAL.
 
+<img src="../images/poster.png" alt="4db0d44927f9b4703fd9942d89cd6596" style="zoom: 50%;" />
+
+
+
 [Download paper here](https://github.com/zhuchichi56/zhuchichi56.github.io/blob/master/files/Poster_of_Personalized_individual_trajectory_prediction_via_Meta_Learning.pdf)
 
