--- a/_talks/2022 SP.md
+++ b/_talks/2022 SP.md
@@ -7,9 +7,11 @@ date: 2022-11-01 - 2022-11-04
 location: "Seattle, USA"
 ---
 
+<img src="/images/poster.png"  style="zoom: 50%;" />
+
 The poster of UAML on 2022 SIGSPATIAL.
 
-<img src="../images/poster.png" alt="4db0d44927f9b4703fd9942d89cd6596" style="zoom: 50%;" />
+
 
 
 
